<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Device display</string>

    <string name="defaults_button">Reset to default</string>
    <string name="category_device_title">Device Settings</string>

    <!-- Screen Preference -->
    <string name="category_screen_title">Screen</string>
    <string name="screen_colors_title">Colors</string>

    <!-- Content adaptive backlight control -->
    <string name="cabc_title_head">CABC</string>
    <string name="cabc_summary_head">Enable content adaptive backlight control</string>

    <!-- mDNIe -->
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe mode</string>
    <string name="mdnie_negative_title_head">Negative mode</string>
    <string name="mdnie_negative_summary_head">Enable/disable inverted colors</string>
    <string name="panel_gamma_title_head">Screen Gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>


    <!-- Touchscreen tuning -->
    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>

    <!-- Sensors Preference -->
    <string name="category_sensors_title">Sensors</string>
    <string name="accelerometer_subcat_title">Accelerometer</string>
    <string name="use_accelerometer_calibration_title_head">Use calibration data</string>
    <string name="use_accelerometer_calibration_summary_head">Use the accelerometer calibration values. Do a calibration after checking this!</string>
    <string name="calibrate_accelerometer_title_head">Calibrate</string>
    <string name="calibrate_accelerometer_summary_head">Put your phone on a flat surface, and press this to calibrate</string>
    <string name="accelerometer_dialog_head">Calibration done</string>
    <string name="accelerometer_dialog_message">The sensor has been successfully calibrated.</string>
</resources>
